# arccrypt

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
crates/arccrypt/: Cargo.toml
crates/arccrypt/src/: lib.rs  prelude.rs
crates/arccrypt_core/: Cargo.toml
crates/arccrypt_core/src/: lib.rs  prelude.rs
crates/arccrypt_core/src/blockchain/: block.rs  mod.rs  transaction.rs  tx_payload.rs
crates/arccrypt_core/src/traits/: payload.rs
crates/arccrypt_macros/: Cargo.toml
crates/arccrypt_macros/src/: lib.rs
crates/dev_helpers/: Cargo.toml
docs/: book.toml
docs/src/: introduction.md
old/: Cargo.toml  example_blockchain.json
old/src/: lib.rs  main.rs
old/src/models/: block.rs  blockchain.rs  blocks.rs  transactions.rs
old/src/models/dnd/: attribute.rs  attributes.rs  combat.rs  hit_dice.rs
src/: lib.rs  main.rs
src/models/: block.rs  blockchain.rs  blocks.rs  mod.rs  transaction.rs  tx_payload.rs
src/models/dnd/: character_sheet.rs  death_saves.rs  equipment.rs  hit_points.rs  mod.rs  personality.rs  saving_throw.rs  saving_throws.rs  skill.rs  skills.rs  spell.rs
