[workspace]
members = ["crates/arccrypt_core", "crates/dev_helpers"]

[workspace.package]
version = "0.1.0"
authors = ["314ShadePi <erikkirkegaardstage@gmail.com>"]

[package]
name = "arccrypt_cli"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
arccrypt_core = { path = "./crates/arccrypt_core" }