[workspace]
members = ["crates/arccrypt", "crates/arccrypt_core", "crates/arccrypt_macros", "crates/dev_helpers"]

[workspace.package]
version = "0.1.0"
authors = ["314ShadePi <erikkirkegaardstage@gmail.com>"]

[package]
name = "arccrypt_cli"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
arccrypt = { path = "./crates/arccrypt" }
secp256k1 = { version = "0.24.1", features = ["serde", "rand-std", "bitcoin_hashes"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
